--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,8 @@
-<p>Acá colocarás el conteido del footer que creas pertinente de acuerdo a tu diseño</p>
+<footer>
+    <div class="footer-container">
+        <div class="logo">
+            <img  [src]="logo" alt="cervezas Duff"/>
+        </div>
+    </div>
+
+</footer>
