--- a/src/app/components/home-content/home-content.component.html
+++ b/src/app/components/home-content/home-content.component.html
@@ -1,1 +1,62 @@
-<p>home-content works!</p>
+<body>
+    <div class="carousel-container" >
+        <div *ngFor="let img of imagenes, let i = index">
+
+            <div *ngIf="i===0" class="carousel-slide active" >
+                <img [src]="img" />
+                
+            </div>
+            <div *ngIf="i!==0" class="carousel-slide" >
+                <img [src]="img" />
+                
+            </div>
+
+
+        </div>
+        
+        <div class="wbn-buttons">
+            <div class="wbn-slider-back-btn">
+              <span>◀</span>
+            </div>
+    
+            <div class="wbn-slider-next-btn">
+              <span>▶</span>
+            </div>
+          </div>
+    </div>
+    <div class="opinion">
+        <h1>Opinion&nbsp;&nbsp;&nbsp;de&nbsp;&nbsp;&nbsp;Nuestros&nbsp;&nbsp;&nbsp;Clientes</h1>
+    </div>
+    
+    <div class="user-experience">
+
+        <div class="cards-experience">
+            <div class="user-photo">
+                <img src="assets/img/homer.png" alt="">
+            </div>
+            <div class="user-op">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae tempora facilis dicta, consectetur adipisicing elit. Vitae tempora facilis dicta, 
+            </div>
+        </div>
+
+        <div class="cards-experience">
+            <div class="user-photo">
+                <img src="assets/img/barney.png" alt="">
+            </div>
+            <div class="user-op">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae tempora facilis dicta, consectetur adipisicing elit. Vitae tempora facilis dicta, 
+            </div>
+            
+        </div>
+        <div class="cards-experience">
+            <div class="user-photo">
+                <img src="assets/img/lenny.png" alt="">
+            </div>
+            <div class="user-op">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae tempora facilis dicta, consectetur adipisicing elit. Vitae tempora facilis dicta, 
+            </div>
+        </div>
+    </div>
+    
+</body>
+
