--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -38,7 +38,7 @@ nav{
     font-weight: bold;
     font-size: 17px;
     cursor: pointer;
-    color: black;
+    color: #CC232B ;
     width: 100%;
     height: 100%;
     align-items: center;
