--- a/src/app/components/tour-content/tour-content.component.html
+++ b/src/app/components/tour-content/tour-content.component.html
@@ -1,1 +1,21 @@
-<p>tour-content works!</p>
+<main>
+    <div class="container">
+        <div class="nosotros">
+            
+            <div class="info-container">
+                <div class="info">
+                    <h3>Duff&nbsp;&nbsp;Tour</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi dolores iste ullam natus eligendi ratione dolorem assumenda tenetur totam, vitae sunt doloremque maxime mollitia blanditiis! Porro id ullam quod. Commodi.Eius minima facere molestiae earum vel quos. a.</p>
+                </div>
+    
+            </div>
+
+            <div class="imagen">
+                <img src="assets/img/duffBrewery.png" alt="">
+            </div>
+
+        </div>
+       
+    </div>
+
+</main>
