--- a/src/app/components/cervezas-content/cervezas-content.component.html
+++ b/src/app/components/cervezas-content/cervezas-content.component.html
@@ -23,13 +23,13 @@
     
             </div>
             <div class="imagen">
-                <img src="assets/img/redDuff.png" alt="">
+                <img src="assets/img/blueDuff.png" alt="">
             </div>
 
         </div>
         <div class="nosotros">
             <div class="imagen">
-                <img src="assets/img/redDuff.png" alt="">
+                <img src="assets/img/greenDuff.png" alt="">
             </div>
             <div class="info-container">
                 <div class="info">
