Contenido Validar edad para ingreso

--- a/src/app/components/age-validation/age-validation.component.html
+++ b/src/app/components/age-validation/age-validation.component.html
@@ -1,2 +1,25 @@
-<button (click)="changeStatus(1)">Soy mayor de edad</button>
-<button (click)="changeStatus(2)">No, No soy mayor de edad</button>
+<main>
+    <div class="container">
+        <div class="nosotros">
+            <div class="imagen">
+                <img src="assets/img/duffman.png" alt="">
+            </div>
+            <div class="info-container">
+                <div class="info">
+                    <h3>Cerveceria&nbsp;&nbsp;Duff</h3>
+                    <p>Bienvenido, para poder continuar debes ser mayor de edad. ¿Eres mayor de edad?</p>
+                    <div class="botonera">
+                        <button (click)="changeStatus(1)">Si, Lo soy</button>
+                        <button (click)="changeStatus(2)">No, No soy</button>
+
+                    </div>
+                  
+                </div>
+    
+            </div>
+
+        </div>
+       
+    </div>
+</main>
+
